force-app/main/default/objects/bpats__Generic_Setting__mdt/bpats__Generic_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Generic Setting</label>
    <pluralLabel>Generic Settings</pluralLabel>
</CustomObject>