force-app/main/default/objects/bpats__Generic_Setting__mdt/fields/bpats__Account_Candidate_Pool_Name__c.field-meta.xml
<CustomField>
    <fullName>bpats__Account_Candidate_Pool_Name__c</fullName>
    <label>Account Candidate Pool Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>