force-app/main/default/objects/bpats__Generic_Setting__mdt/fields/bpats__Account_Candidate_Pool_Number__c.field-meta.xml
<CustomField>
    <fullName>bpats__Account_Candidate_Pool_Number__c</fullName>
    <label>Account Candidate Pool Number</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>