force-app/main/default/objects/bpats__Generic_Setting__mdt/fields/bpats__Account_Reference__c.field-meta.xml
<CustomField>
    <fullName>bpats__Account_Reference__c</fullName>
    <label>Account Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>