force-app/main/default/objects/bpats__Generic_Setting__mdt/fields/bpats__Assign_Contacts_to_Account__c.field-meta.xml
<CustomField>
    <fullName>bpats__Assign_Contacts_to_Account__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Assign Contacts to Account</label>
    <type>Checkbox</type>
</CustomField>