force-app/main/default/objects/bpats__Generic_Setting__mdt/fields/bpats__ATS_Custom_Schedule_Setting__c.field-meta.xml
<CustomField>
    <fullName>bpats__ATS_Custom_Schedule_Setting__c</fullName>
    <label>Custom Schedule Setting</label>
    <type>TextArea</type>
</CustomField>