force-app/main/default/objects/bpats__Generic_Setting__mdt/fields/bpats__ATS_Interview_Feedback_Scheduling__c.field-meta.xml
<CustomField>
    <fullName>bpats__ATS_Interview_Feedback_Scheduling__c</fullName>
    <label>Interview Feedback Scheduling</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>As soon as the record gets created</fullName>
                <default>true</default>
                <label>As soon as the record gets created</label>
            </value>
            <value>
                <fullName>As the interview gets done</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>