force-app/main/default/objects/bpats__Generic_Setting__mdt/fields/bpats__ATS_Max_Schedule_Time__c.field-meta.xml
<CustomField>
    <fullName>bpats__ATS_Max_Schedule_Time__c</fullName>
    <label>Max Schedule Time</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>