force-app/main/default/objects/bpats__Generic_Setting__mdt/fields/bpats__Candidate_Contact_List_Default_Tab__c.field-meta.xml
<CustomField>
    <fullName>bpats__Candidate_Contact_List_Default_Tab__c</fullName>
    <label>Candidate Contact List Default Tab</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Details</fullName>
                <default>true</default>
                <label>Details</label>
            </value>
            <value>
                <fullName>Resume</fullName>
            </value>
            <value>
                <fullName>Related</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>