force-app/main/default/objects/bpats__Generic_Setting__mdt/fields/bpats__Candidate_Related_Lists__c.field-meta.xml
<CustomField>
    <fullName>bpats__Candidate_Related_Lists__c</fullName>
    <label>Candidate Related Lists</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>