force-app/main/default/objects/bpats__Generic_Setting__mdt/fields/bpats__Client_Mass_Actions__c.field-meta.xml
<CustomField>
    <fullName>bpats__Client_Mass_Actions__c</fullName>
    <label>Client Mass Actions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>