force-app/main/default/objects/bpats__Generic_Setting__mdt/fields/bpats__Community_URL__c.field-meta.xml
<CustomField>
    <fullName>bpats__Community_URL__c</fullName>
    <label>Community URL</label>
    <type>Url</type>
</CustomField>