force-app/main/default/objects/bpats__Generic_Setting__mdt/fields/bpats__Contact_Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>bpats__Contact_Filter_Criteria__c</fullName>
    <label>Contact Filter Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>