force-app/main/default/objects/bpats__Generic_Setting__mdt/fields/bpats__Contact_Filter_Fields__c.field-meta.xml
<CustomField>
    <fullName>bpats__Contact_Filter_Fields__c</fullName>
    <label>Contact Filter Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>