force-app/main/default/objects/bpats__Generic_Setting__mdt/fields/bpats__Contacts_Allowed_In_Account__c.field-meta.xml
<CustomField>
    <fullName>bpats__Contacts_Allowed_In_Account__c</fullName>
    <label>Contacts Allowed In Account</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>