force-app/main/default/objects/bpats__Generic_Setting__mdt/fields/bpats__Convert_JBA_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>bpats__Convert_JBA_to_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Convert JBA to Contact</label>
    <type>Checkbox</type>
</CustomField>