force-app/main/default/objects/bpats__Generic_Setting__mdt/fields/bpats__Default_Burden_Percentage__c.field-meta.xml
<CustomField>
    <fullName>bpats__Default_Burden_Percentage__c</fullName>
    <label>Default Burden Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>