force-app/main/default/objects/bpats__Generic_Setting__mdt/fields/bpats__External_Jobs_Limit__c.field-meta.xml
<CustomField>
    <fullName>bpats__External_Jobs_Limit__c</fullName>
    <label>External Jobs Limit</label>
    <length>4</length>
    <type>Text</type>
</CustomField>