force-app/main/default/objects/bpats__Generic_Setting__mdt/fields/bpats__Is_Enable_Event_Creation__c.field-meta.xml
<CustomField>
    <fullName>bpats__Is_Enable_Event_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>It is used for Event Creation for Interview Schedule</description>
    <label>Is Enable Event Creation</label>
    <type>Checkbox</type>
</CustomField>