force-app/main/default/objects/bpats__Generic_Setting__mdt/fields/bpats__Is_TK_Parsing_Enabled__c.field-meta.xml
<CustomField>
    <fullName>bpats__Is_TK_Parsing_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is TK Parsing Enabled</label>
    <type>Checkbox</type>
</CustomField>