force-app/main/default/objects/bpats__Generic_Setting__mdt/fields/bpats__Job_Filter_Fields__c.field-meta.xml
<CustomField>
    <fullName>bpats__Job_Filter_Fields__c</fullName>
    <label>Job Filter Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>