force-app/main/default/objects/bpats__Generic_Setting__mdt/fields/bpats__Prevent_TK_Callout_on_Contact_Creation__c.field-meta.xml
<CustomField>
    <fullName>bpats__Prevent_TK_Callout_on_Contact_Creation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prevent TK Callout on Contact Creation</label>
    <type>Checkbox</type>
</CustomField>