force-app/main/default/objects/bpats__Generic_Setting__mdt/fields/bpats__Show_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>bpats__Show_Rejection_Reason__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Rejection Reason</label>
    <type>Checkbox</type>
</CustomField>