force-app/main/default/objects/bpats__Generic_Setting__mdt/fields/bpats__Template_Related_Lists__c.field-meta.xml
<CustomField>
    <fullName>bpats__Template_Related_Lists__c</fullName>
    <label>Template Related Lists</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>